{
  "version": 4,
  "terraform_version": "1.14.5",
  "serial": 88,
  "lineage": "28aa63f2-1257-ff0f-7784-f200bb04ab2b",
  "resources": [
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:160884802838:security-group/sg-050e190cf6e6133af",
            "description": "Security group for Application Load Balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-050e190cf6e6133af",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from internet (redirect to HTTPS)",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS from internet",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "cloudwave-dev-alb-20260218144806027900000007",
            "name_prefix": "cloudwave-dev-alb-",
            "owner_id": "160884802838",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "cloudwave-dev-alb-sg",
              "Project": "cloudwave"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "cloudwave-dev-alb-sg",
              "Project": "cloudwave"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b4c5a4fa814dfff0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_control_plane",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:160884802838:security-group/sg-0057e54e7b9ec7803",
            "description": "Security group for EKS Control Plane",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0057e54e7b9ec7803",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Node to control plane API",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0263417a53018ff53"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "cloudwave-dev-eks-cp-20260218144806603100000009",
            "name_prefix": "cloudwave-dev-eks-cp-",
            "owner_id": "160884802838",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "cloudwave-dev-eks-cp-sg",
              "Project": "cloudwave"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "cloudwave-dev-eks-cp-sg",
              "Project": "cloudwave"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b4c5a4fa814dfff0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:160884802838:security-group/sg-0263417a53018ff53",
            "description": "Security group for EKS Worker Nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0263417a53018ff53",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "ALB to node (NodePort range)",
                "from_port": 30000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-050e190cf6e6133af"
                ],
                "self": false,
                "to_port": 32767
              },
              {
                "cidr_blocks": [],
                "description": "ALB to node (app port 8080)",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-050e190cf6e6133af"
                ],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [],
                "description": "Control plane to CoreDNS (TCP)",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0057e54e7b9ec7803"
                ],
                "self": false,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Control plane to CoreDNS (UDP)",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [
                  "sg-0057e54e7b9ec7803"
                ],
                "self": false,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Control plane to kubelet",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0057e54e7b9ec7803"
                ],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [],
                "description": "Control plane to node (HTTPS)",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0057e54e7b9ec7803"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Node to node communication",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "cloudwave-dev-eks-node-20260218144805968400000006",
            "name_prefix": "cloudwave-dev-eks-node-",
            "owner_id": "160884802838",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "cloudwave-dev-eks-node-sg",
              "Project": "cloudwave"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "cloudwave-dev-eks-node-sg",
              "Project": "cloudwave"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b4c5a4fa814dfff0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:160884802838:security-group/sg-061ba890e4bc53252",
            "description": "Security group for RDS MySQL",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-061ba890e4bc53252",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "EKS nodes to RDS MySQL",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0263417a53018ff53"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "cloudwave-dev-rds-20260218144806467300000008",
            "name_prefix": "cloudwave-dev-rds-",
            "owner_id": "160884802838",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "cloudwave-dev-rds-sg",
              "Project": "cloudwave"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "cloudwave-dev-rds-sg",
              "Project": "cloudwave"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b4c5a4fa814dfff0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "redis",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:160884802838:security-group/sg-0e66e23acee77b01c",
            "description": "Security group for ElastiCache Redis",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e66e23acee77b01c",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "EKS nodes to Redis",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0263417a53018ff53"
                ],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "cloudwave-dev-redis-2026021814480668370000000a",
            "name_prefix": "cloudwave-dev-redis-",
            "owner_id": "160884802838",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "cloudwave-dev-redis-sg",
              "Project": "cloudwave"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "cloudwave-dev-redis-sg",
              "Project": "cloudwave"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b4c5a4fa814dfff0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "alb_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:160884802838:security-group-rule/sgr-0941f00fd96f0b4ea",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "All outbound traffic",
            "from_port": null,
            "id": "sgr-0941f00fd96f0b4ea",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-050e190cf6e6133af",
            "security_group_rule_id": "sgr-0941f00fd96f0b4ea",
            "tags": {
              "Name": "alb-all-egress"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "alb-all-egress",
              "Project": "cloudwave"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security_groups.aws_security_group.alb",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "eks_cp_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:160884802838:security-group-rule/sgr-09ac79d8a38c010b9",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "All outbound traffic",
            "from_port": null,
            "id": "sgr-09ac79d8a38c010b9",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0057e54e7b9ec7803",
            "security_group_rule_id": "sgr-09ac79d8a38c010b9",
            "tags": {
              "Name": "eks-cp-all-egress"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "eks-cp-all-egress",
              "Project": "cloudwave"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security_groups.aws_security_group.eks_control_plane",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "node_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:160884802838:security-group-rule/sgr-0044c751479ddba94",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "All outbound traffic",
            "from_port": null,
            "id": "sgr-0044c751479ddba94",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0263417a53018ff53",
            "security_group_rule_id": "sgr-0044c751479ddba94",
            "tags": {
              "Name": "node-all-egress"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "node-all-egress",
              "Project": "cloudwave"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security_groups.aws_security_group.eks_node",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "rds_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:160884802838:security-group-rule/sgr-017124f4b79322fde",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "All outbound traffic",
            "from_port": null,
            "id": "sgr-017124f4b79322fde",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-061ba890e4bc53252",
            "security_group_rule_id": "sgr-017124f4b79322fde",
            "tags": {
              "Name": "rds-all-egress"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "rds-all-egress",
              "Project": "cloudwave"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security_groups.aws_security_group.rds",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "redis_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:160884802838:security-group-rule/sgr-02f5d3c94b64b9652",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "All outbound traffic",
            "from_port": null,
            "id": "sgr-02f5d3c94b64b9652",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0e66e23acee77b01c",
            "security_group_rule_id": "sgr-02f5d3c94b64b9652",
            "tags": {
              "Name": "redis-all-egress"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "redis-all-egress",
              "Project": "cloudwave"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security_groups.aws_security_group.redis",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "alb_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:160884802838:security-group-rule/sgr-0b5e15d9bbd55a2c2",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "HTTP from internet (redirect to HTTPS)",
            "from_port": 80,
            "id": "sgr-0b5e15d9bbd55a2c2",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-050e190cf6e6133af",
            "security_group_rule_id": "sgr-0b5e15d9bbd55a2c2",
            "tags": {
              "Name": "alb-http-ingress"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "alb-http-ingress",
              "Project": "cloudwave"
            },
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security_groups.aws_security_group.alb",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "alb_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:160884802838:security-group-rule/sgr-07c57349fec079a97",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "HTTPS from internet",
            "from_port": 443,
            "id": "sgr-07c57349fec079a97",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-050e190cf6e6133af",
            "security_group_rule_id": "sgr-07c57349fec079a97",
            "tags": {
              "Name": "alb-https-ingress"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "alb-https-ingress",
              "Project": "cloudwave"
            },
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security_groups.aws_security_group.alb",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "cp_from_node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:160884802838:security-group-rule/sgr-0f38b873f3d567128",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "Node to control plane API",
            "from_port": 443,
            "id": "sgr-0f38b873f3d567128",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0263417a53018ff53",
            "security_group_id": "sg-0057e54e7b9ec7803",
            "security_group_rule_id": "sgr-0f38b873f3d567128",
            "tags": {
              "Name": "cp-from-node"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "cp-from-node",
              "Project": "cloudwave"
            },
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security_groups.aws_security_group.eks_control_plane",
            "module.security_groups.aws_security_group.eks_node",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "node_from_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:160884802838:security-group-rule/sgr-0887c286e28f07e41",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "ALB to node (NodePort range)",
            "from_port": 30000,
            "id": "sgr-0887c286e28f07e41",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-050e190cf6e6133af",
            "security_group_id": "sg-0263417a53018ff53",
            "security_group_rule_id": "sgr-0887c286e28f07e41",
            "tags": {
              "Name": "node-from-alb-nodeport"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "node-from-alb-nodeport",
              "Project": "cloudwave"
            },
            "to_port": 32767
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security_groups.aws_security_group.alb",
            "module.security_groups.aws_security_group.eks_node",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "node_from_alb_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:160884802838:security-group-rule/sgr-093ef5b904fcdde7c",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "ALB to node (app port 8080)",
            "from_port": 8080,
            "id": "sgr-093ef5b904fcdde7c",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-050e190cf6e6133af",
            "security_group_id": "sg-0263417a53018ff53",
            "security_group_rule_id": "sgr-093ef5b904fcdde7c",
            "tags": {
              "Name": "node-from-alb-app"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "node-from-alb-app",
              "Project": "cloudwave"
            },
            "to_port": 8080
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security_groups.aws_security_group.alb",
            "module.security_groups.aws_security_group.eks_node",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "node_from_cp_dns_tcp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:160884802838:security-group-rule/sgr-0c2b20187601a821d",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "Control plane to CoreDNS (TCP)",
            "from_port": 53,
            "id": "sgr-0c2b20187601a821d",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0057e54e7b9ec7803",
            "security_group_id": "sg-0263417a53018ff53",
            "security_group_rule_id": "sgr-0c2b20187601a821d",
            "tags": {
              "Name": "node-from-cp-dns-tcp"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "node-from-cp-dns-tcp",
              "Project": "cloudwave"
            },
            "to_port": 53
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security_groups.aws_security_group.eks_control_plane",
            "module.security_groups.aws_security_group.eks_node",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "node_from_cp_dns_udp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:160884802838:security-group-rule/sgr-010b5df4c52708ef6",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "Control plane to CoreDNS (UDP)",
            "from_port": 53,
            "id": "sgr-010b5df4c52708ef6",
            "ip_protocol": "udp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0057e54e7b9ec7803",
            "security_group_id": "sg-0263417a53018ff53",
            "security_group_rule_id": "sgr-010b5df4c52708ef6",
            "tags": {
              "Name": "node-from-cp-dns-udp"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "node-from-cp-dns-udp",
              "Project": "cloudwave"
            },
            "to_port": 53
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security_groups.aws_security_group.eks_control_plane",
            "module.security_groups.aws_security_group.eks_node",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "node_from_cp_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:160884802838:security-group-rule/sgr-08e193d3d0d0f3d77",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "Control plane to node (HTTPS)",
            "from_port": 443,
            "id": "sgr-08e193d3d0d0f3d77",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0057e54e7b9ec7803",
            "security_group_id": "sg-0263417a53018ff53",
            "security_group_rule_id": "sgr-08e193d3d0d0f3d77",
            "tags": {
              "Name": "node-from-cp-https"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "node-from-cp-https",
              "Project": "cloudwave"
            },
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security_groups.aws_security_group.eks_control_plane",
            "module.security_groups.aws_security_group.eks_node",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "node_from_cp_kubelet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:160884802838:security-group-rule/sgr-0058b0fa724877a4e",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "Control plane to kubelet",
            "from_port": 10250,
            "id": "sgr-0058b0fa724877a4e",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0057e54e7b9ec7803",
            "security_group_id": "sg-0263417a53018ff53",
            "security_group_rule_id": "sgr-0058b0fa724877a4e",
            "tags": {
              "Name": "node-from-cp-kubelet"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "node-from-cp-kubelet",
              "Project": "cloudwave"
            },
            "to_port": 10250
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security_groups.aws_security_group.eks_control_plane",
            "module.security_groups.aws_security_group.eks_node",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "node_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:160884802838:security-group-rule/sgr-0d560f08b730fa62c",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "Node to node communication",
            "from_port": null,
            "id": "sgr-0d560f08b730fa62c",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0263417a53018ff53",
            "security_group_id": "sg-0263417a53018ff53",
            "security_group_rule_id": "sgr-0d560f08b730fa62c",
            "tags": {
              "Name": "node-self-ingress"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "node-self-ingress",
              "Project": "cloudwave"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security_groups.aws_security_group.eks_node",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "rds_from_node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:160884802838:security-group-rule/sgr-0477d6de3fed1701f",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "EKS nodes to RDS MySQL",
            "from_port": 3306,
            "id": "sgr-0477d6de3fed1701f",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0263417a53018ff53",
            "security_group_id": "sg-061ba890e4bc53252",
            "security_group_rule_id": "sgr-0477d6de3fed1701f",
            "tags": {
              "Name": "rds-from-eks-node"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "rds-from-eks-node",
              "Project": "cloudwave"
            },
            "to_port": 3306
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security_groups.aws_security_group.eks_node",
            "module.security_groups.aws_security_group.rds",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "redis_from_node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:160884802838:security-group-rule/sgr-009cc71f8dfb5d1bc",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "EKS nodes to Redis",
            "from_port": 6379,
            "id": "sgr-009cc71f8dfb5d1bc",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0263417a53018ff53",
            "security_group_id": "sg-0e66e23acee77b01c",
            "security_group_rule_id": "sgr-009cc71f8dfb5d1bc",
            "tags": {
              "Name": "redis-from-eks-node"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "redis-from-eks-node",
              "Project": "cloudwave"
            },
            "to_port": 6379
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security_groups.aws_security_group.eks_node",
            "module.security_groups.aws_security_group.redis",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09dd390101a8f15fd",
            "arn": "arn:aws:ec2:ap-northeast-2:160884802838:elastic-ip/eipalloc-09dd390101a8f15fd",
            "association_id": "eipassoc-0fb97fc2dd4150f9b",
            "domain": "vpc",
            "id": "eipalloc-09dd390101a8f15fd",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-05e270d56eb02de4e",
            "private_dns": "ip-10-0-101-21.ap-northeast-2.compute.internal",
            "private_ip": "10.0.101.21",
            "public_dns": "ec2-16-184-63-212.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "16.184.63.212",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "cloudwave-dev-nat-eip-ap-northeast-2a",
              "Project": "cloudwave"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "cloudwave-dev-nat-eip-ap-northeast-2a",
              "Project": "cloudwave"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-085fe20d266e997e7",
            "arn": "arn:aws:ec2:ap-northeast-2:160884802838:elastic-ip/eipalloc-085fe20d266e997e7",
            "association_id": "eipassoc-03b6a4041a45e9e3e",
            "domain": "vpc",
            "id": "eipalloc-085fe20d266e997e7",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-01be4cced02979ed5",
            "private_dns": "ip-10-0-102-228.ap-northeast-2.compute.internal",
            "private_ip": "10.0.102.228",
            "public_dns": "ec2-3-35-108-98.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.35.108.98",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "cloudwave-dev-nat-eip-ap-northeast-2c",
              "Project": "cloudwave"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "cloudwave-dev-nat-eip-ap-northeast-2c",
              "Project": "cloudwave"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:160884802838:internet-gateway/igw-01466927b12348355",
            "id": "igw-01466927b12348355",
            "owner_id": "160884802838",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "cloudwave-dev-igw",
              "Project": "cloudwave"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "cloudwave-dev-igw",
              "Project": "cloudwave"
            },
            "vpc_id": "vpc-0b4c5a4fa814dfff0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09dd390101a8f15fd",
            "association_id": "eipassoc-0fb97fc2dd4150f9b",
            "connectivity_type": "public",
            "id": "nat-0a6d743aa606cc866",
            "network_interface_id": "eni-05e270d56eb02de4e",
            "private_ip": "10.0.101.21",
            "public_ip": "16.184.63.212",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-07723adbd386c8d73",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "cloudwave-dev-nat-ap-northeast-2a",
              "Project": "cloudwave"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "cloudwave-dev-nat-ap-northeast-2a",
              "Project": "cloudwave"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-085fe20d266e997e7",
            "association_id": "eipassoc-03b6a4041a45e9e3e",
            "connectivity_type": "public",
            "id": "nat-04882c764cc3f9385",
            "network_interface_id": "eni-01be4cced02979ed5",
            "private_ip": "10.0.102.228",
            "public_ip": "3.35.108.98",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-021a93b6cfb9f6dfc",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "cloudwave-dev-nat-ap-northeast-2c",
              "Project": "cloudwave"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "cloudwave-dev-nat-ap-northeast-2c",
              "Project": "cloudwave"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0beca3b087c89bd051080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0a6d743aa606cc866",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0beca3b087c89bd05",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-067ec7f2291557b9c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-04882c764cc3f9385",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-067ec7f2291557b9c",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-01466927b12348355",
            "id": "r-rtb-05b10d4011b2027f41080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-05b10d4011b2027f4",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:160884802838:route-table/rtb-0beca3b087c89bd05",
            "id": "rtb-0beca3b087c89bd05",
            "owner_id": "160884802838",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0a6d743aa606cc866",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "cloudwave-dev-private-rt-ap-northeast-2a",
              "Project": "cloudwave"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "cloudwave-dev-private-rt-ap-northeast-2a",
              "Project": "cloudwave"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b4c5a4fa814dfff0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:160884802838:route-table/rtb-067ec7f2291557b9c",
            "id": "rtb-067ec7f2291557b9c",
            "owner_id": "160884802838",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-04882c764cc3f9385",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "cloudwave-dev-private-rt-ap-northeast-2c",
              "Project": "cloudwave"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "cloudwave-dev-private-rt-ap-northeast-2c",
              "Project": "cloudwave"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b4c5a4fa814dfff0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:160884802838:route-table/rtb-05b10d4011b2027f4",
            "id": "rtb-05b10d4011b2027f4",
            "owner_id": "160884802838",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01466927b12348355",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "cloudwave-dev-public-rt",
              "Project": "cloudwave"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "cloudwave-dev-public-rt",
              "Project": "cloudwave"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b4c5a4fa814dfff0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0525915babbec402a",
            "route_table_id": "rtb-0beca3b087c89bd05",
            "subnet_id": "subnet-0cb03a0fca050edfc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-035f4517fbeb45962",
            "route_table_id": "rtb-067ec7f2291557b9c",
            "subnet_id": "subnet-05c4afb21fdf3249c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fcc3a7e23eba671d",
            "route_table_id": "rtb-05b10d4011b2027f4",
            "subnet_id": "subnet-07723adbd386c8d73"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03c3602b2a5fb90fd",
            "route_table_id": "rtb-05b10d4011b2027f4",
            "subnet_id": "subnet-021a93b6cfb9f6dfc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:160884802838:subnet/subnet-0cb03a0fca050edfc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cb03a0fca050edfc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "160884802838",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "cloudwave-dev-private-ap-northeast-2a",
              "Project": "cloudwave",
              "kubernetes.io/cluster/cloudwave-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "cloudwave-dev-private-ap-northeast-2a",
              "Project": "cloudwave",
              "kubernetes.io/cluster/cloudwave-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0b4c5a4fa814dfff0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:160884802838:subnet/subnet-05c4afb21fdf3249c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05c4afb21fdf3249c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "160884802838",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "cloudwave-dev-private-ap-northeast-2c",
              "Project": "cloudwave",
              "kubernetes.io/cluster/cloudwave-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "cloudwave-dev-private-ap-northeast-2c",
              "Project": "cloudwave",
              "kubernetes.io/cluster/cloudwave-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0b4c5a4fa814dfff0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:160884802838:subnet/subnet-07723adbd386c8d73",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07723adbd386c8d73",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "160884802838",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "cloudwave-dev-public-ap-northeast-2a",
              "Project": "cloudwave",
              "kubernetes.io/cluster/cloudwave-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "cloudwave-dev-public-ap-northeast-2a",
              "Project": "cloudwave",
              "kubernetes.io/cluster/cloudwave-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0b4c5a4fa814dfff0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:160884802838:subnet/subnet-021a93b6cfb9f6dfc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-021a93b6cfb9f6dfc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "160884802838",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "cloudwave-dev-public-ap-northeast-2c",
              "Project": "cloudwave",
              "kubernetes.io/cluster/cloudwave-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "cloudwave-dev-public-ap-northeast-2c",
              "Project": "cloudwave",
              "kubernetes.io/cluster/cloudwave-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0b4c5a4fa814dfff0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:160884802838:vpc/vpc-0b4c5a4fa814dfff0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e3230df413270cc3",
            "default_route_table_id": "rtb-0f5c03965e687f6a3",
            "default_security_group_id": "sg-0d356518202413db2",
            "dhcp_options_id": "dopt-0a238e2c2214c5c99",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b4c5a4fa814dfff0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f5c03965e687f6a3",
            "owner_id": "160884802838",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "cloudwave-dev-vpc",
              "Project": "cloudwave"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "cloudwave-dev-vpc",
              "Project": "cloudwave"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    }
  ]
}